resolved fdo#51961 let "Default ..." currency entry follow selected locale

Change-Id: I69b13d1009638451fa6c2bc9336cdac0bab6ec32
(cherry picked from commit aec792c1a429bd96a172d529521247a2b3391987)